tests/testcases/valid/02_arrays_and_strings.ciel
fn main() -> int {
    int nums[5] = {1, 2, 3, 4, 5};
    char message[20] = "Hello, CIEL!";
    int arr[5];
    arr[0] = 100;
    arr[4] = 500;
    int first = arr[0];
    char str1[10] = "hello";
    char str2[] = "Hello World";
    char first_char = str1[0];
    char space = str2[5];
    char buffer[20];
    buffer[0] = 'H';
    buffer[1] = 'i';
    buffer[2] = '\0';
    int grid[3][4];
    grid[0][0] = 1;
    grid[2][3] = 12;
    int matrix[2][3] = {{1, 2, 3}, {4, 5, 6}};
    char strings[3][10] = {"hello", "world", "test"};

    return 0;
}
