tests/testcases/invalid/03_unterminated_string.ciel
fn main() -> int {
    char s[10] = "Hello
    ;
    return 0;
}
